--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         </section>
 
-        <section class="our-team">
+        <!-- <section class="our-team">
             <div class="container">
                 <h2 class="our-team-text">Our Team</h2>
                 <ul class="list team-list">
@@ -330,9 +330,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- Customers -->
-        <section class="customers">
+        <!-- <section class="customers">
             <div class="container">
                 <h2 class="customers-title">Customers</h2>
                 <ul class="list customers-list">
@@ -371,11 +371,11 @@
                         </a></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
-    <footer class="logo-link-footer">
+    <!-- <footer class="logo-link-footer">
         <section class="footer-info container">
             <div class=" footer-content">
                 <a class="link logo logo-footer" href="./index.html"><span class="web">WEB</span><span
@@ -418,7 +418,7 @@
 
 
 
-    </footer>
+    </footer> -->
 
     <script src="./js/modal.js"></script>
 
