--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                                 <use href="./img/symbol_svg.svg#icon_antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="list-header">Strategy</h3>
-                        <p class="list-text">Our goal is to identify the business
+                        <h3 class="feature-list-header">Strategy</h3>
+                        <p class="feature-list-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution. </p>
                     </li>
                     <li class="feature-list-item icon-clock">
@@ -158,8 +158,8 @@
                                 <use href="./img/symbol_svg.svg#icon_clock"></use>
                             </svg>
                         </div>
-                        <h3 class="list-header">Punctuality</h3>
-                        <p class="list-text">Bring the key message to the brand's audience for the best price within the
+                        <h3 class="feature-list-header">Punctuality</h3>
+                        <p class="feature-list-text">Bring the key message to the brand's audience for the best price within the
                             shortest possible
                             time.</p>
                     </li>
@@ -169,8 +169,8 @@
                                 <use href="./img/symbol_svg.svg#icon_diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="list-header">Diligence</h3>
-                        <p class="list-text">Research and confirm brands that present the strongest digital growth
+                        <h3 class="feature-list-header">Diligence</h3>
+                        <p class="feature-list-text">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
@@ -180,8 +180,8 @@
                                 <use href="./img/symbol_svg.svg#icon_astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="list-header">Technologies</h3>
-                        <p class="list-text">Design practice focused on digital experiences. We bring forth a deep
+                        <h3 class="feature-list-header">Technologies</h3>
+                        <p class="feature-list-text">Design practice focused on digital experiences. We bring forth a deep
                             passion
                             for
                             problem-solving.</p>
@@ -209,15 +209,15 @@
 
         </section>
 
-        <!-- <section class="our-team">
+        <section class="our-team">
             <div class="container">
                 <h2 class="our-team-text">Our Team</h2>
                 <ul class="list team-list">
                     <li class="team-member">
                         <img src="./img/Mark_photo.jpg" alt="Photo of Mark Guerrero" width="264">
                         <div class="team-content">
-                            <h3 class="list-header">Mark Guerrero</h3>
-                            <p class="list-item">Product Designer</p>
+                            <h3 class="member__name">Mark Guerrero</h3>
+                            <p class="member__position">Product Designer</p>
 
                             <ul class="list team-sm-list">
                                 <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg
@@ -247,8 +247,8 @@
                     <li class="team-member">
                         <img src="./img/Tom_photo.jpg" alt="Photo of Tom Ford" width="264">
                         <div class="team-content">
-                            <h3 class="list-header">Tom Ford</h3>
-                            <p class="list-text">Frontend Developer</p>
+                            <h3 class="member__name">Tom Ford</h3>
+                            <p class="member__position">Frontend Developer</p>
                             <ul class="list team-sm-list">
                                 <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg
                                             class="team-link-icon">
@@ -275,8 +275,8 @@
                     <li class="team-member">
                         <img src="./img/Camilia_photo.jpg" alt="Photo of Camila Garcia" width="264">
                         <div class="team-content">
-                            <h3 class="list-header">Camila Garcia</h3>
-                            <p class="list-text">Marketing</p>
+                            <h3 class="member__name">Camila Garcia</h3>
+                            <p class="member__position">Marketing</p>
                             <ul class="list team-sm-list">
                                 <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg
                                             class="team-link-icon">
@@ -303,8 +303,8 @@
                     <li class="team-member">
                         <img src="./img/Daniel_photo.jpg" alt="Photo of Daniel Wilson" width="264">
                         <div class="team-content">
-                            <h3 class="list-header">Daniel Wilson</h3>
-                            <p class="list-text">UI Designer</p>
+                            <h3 class="member__name">Daniel Wilson</h3>
+                            <p class="member__position">UI Designer</p>
                             <ul class="list team-sm-list">
                                 <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg
                                             class="team-link-icon">
@@ -330,8 +330,8 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
-        <!-- Customers -->
+        </section>
+       <!-- Customers -->
         <!-- <section class="customers">
             <div class="container">
                 <h2 class="customers-title">Customers</h2>
