--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                             </svg>
                         </div>
                         <h3 class="feature-list-header">Punctuality</h3>
-                        <p class="feature-list-text">Bring the key message to the brand's audience for the best price within the
+                        <p class="feature-list-text">Bring the key message to the brand's audience for the best price
+                            within the
                             shortest possible
                             time.</p>
                     </li>
@@ -170,7 +171,8 @@
                             </svg>
                         </div>
                         <h3 class="feature-list-header">Diligence</h3>
-                        <p class="feature-list-text">Research and confirm brands that present the strongest digital growth
+                        <p class="feature-list-text">Research and confirm brands that present the strongest digital
+                            growth
                             opportunities and minimize
                             risk.</p>
                     </li>
@@ -181,7 +183,8 @@
                             </svg>
                         </div>
                         <h3 class="feature-list-header">Technologies</h3>
-                        <p class="feature-list-text">Design practice focused on digital experiences. We bring forth a deep
+                        <p class="feature-list-text">Design practice focused on digital experiences. We bring forth a
+                            deep
                             passion
                             for
                             problem-solving.</p>
@@ -210,7 +213,7 @@
         </section>
 
         <section class="our-team">
-            <div class="container">
+            <div class="container team__container">
                 <h2 class="our-team-text">Our Team</h2>
                 <ul class="list team-list">
                     <li class="team-member">
@@ -331,9 +334,9 @@
                 </ul>
             </div>
         </section>
-       <!-- Customers -->
-        <!-- <section class="customers">
-            <div class="container">
+        <!-- Customers -->
+        <section class="customers">
+            <div class="container customers-container">
                 <h2 class="customers-title">Customers</h2>
                 <ul class="list customers-list">
                     <li class="customers-item">
@@ -371,14 +374,14 @@
                         </a></li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
     </main>
 
-    <!-- <footer class="logo-link-footer">
+    <footer class="logo-link-footer">
         <section class="footer-info container">
             <div class=" footer-content">
-                <a class="link logo logo-footer" href="./index.html"><span class="web">WEB</span><span
+                <a class="link logo-footer" href="./index.html"><span class="web">WEB</span><span
                         class="studiofooter">STUDIO</span></a>
                 <p class="footer-paragraph">Increase the flow of customers and <br> sales for your business with digital
                     <br> marketing & growth solutions.
@@ -405,8 +408,8 @@
             </div>
             <div class="box-subscribe">
                 <p class="footer-header">Subscribe</p>
-                <form>
-                    <input class="input-email" type="email" name="subscribe" placeholder="E-mail" />
+                <form class="footer-form">
+                    <input class="input-email footer__input" type="email" name="subscribe" placeholder="E-mail" />
                     <button class="button-subscribe" type="submit">Subscribe
                         <svg class="subscribe-icon">
                             <use href="./img/symbol-upd-2.svg#icon_send"></use>
@@ -415,10 +418,7 @@
                 </form>
             </div>
         </section>
-
-
-
-    </footer> -->
+    </footer>
 
     <script src="./js/modal.js"></script>
 
