--- a/index.html
+++ b/index.html
@@ -57,6 +57,70 @@
 
             </ul>
 
+            <button type="button" class="button-header-open js-open-menu">
+                <svg class="burger_icon">
+                    <use href="./img/upd_symbol.svg#icon_burger"></use>
+                </svg>
+            </button>
+        </div>
+
+        <div class="mobile-menu js-menu-container">
+            <div class="mobile-menu-container">
+                <button type="button" class="close-button-burger js-close-menu">
+                    <svg class="mobile-menu-closer">
+                        <use href="./img/upd_symbol.svg#icon_cross"></use>
+                    </svg>
+                </button>
+                <div class="mobile-nav">
+                    <ul class="mobile-navigation-list list">
+                        <li class="mobile-nav-list-item">
+                            <a class="link mobile-nav-link active" href="./index.html"><span
+                                    class="nav-item">Studio</span></a>
+                        </li>
+                        <li class="mobile-nav-list-item">
+                            <a class="link mobile-nav-link" href="./porfolio.html"><span
+                                    class="nav-item">Portfolio</span></a>
+                        </li>
+                        <li class="mobile-nav-list-item">
+                            <a class="link mobile-nav-link" href="/"><span class="nav-item">Contacts</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mobile-adress">
+                    <ul class="list mobile-adress-list">
+                        <li class="mobile-adress-list-item">
+                            <a class="link mobile-adress-link-tel" href="tel:+11(000)1111111"><span
+                                    class="tel">+11(000)111-11-11</span></a>
+                        </li>
+                        <li class="mobile-adress-list-item">
+                            <a class="link mobile-adress-link" href="mailto:info@devstudio.com"><span
+                                    class="e-mail">info@devstudio.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mobile-social-media">
+                    <ul class="list team-sm-list">
+                        <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg class="team-link-icon">
+                                    <use href="./img/symbol_svg.svg#icon_instagram"></use>
+                                </svg></a>
+                        </li>
+                        <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg class="team-link-icon">
+                                    <use href="./img/symbol_svg.svg#icon_twitter"></use>
+                                </svg></a>
+                        </li>
+                        <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg class="team-link-icon">
+                                    <use href="./img/symbol_svg.svg#icon_facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="team-sm-list-item"><a href="#" class="team-sm-link"><svg class="team-link-icon">
+                                    <use href="./img/symbol_svg.svg#icon_linkedin"></use>
+                                </svg></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         </div>
 
 
@@ -273,6 +337,7 @@
                                             <use href="./img/symbol_svg.svg#icon_linkedin"></use>
                                         </svg></a>
                                 </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -421,6 +486,7 @@
     </footer>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 
 </body>
 
