--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     </main>
 
     <footer class="logo-link-footer">
-        <section class="footer-info container">
+        <div class="footer-info container">
             <div class=" footer-content">
                 <a class="link logo-footer" href="./index.html"><span class="web">WEB</span><span
                         class="studiofooter">STUDIO</span></a>
@@ -496,7 +496,7 @@
                     </button>
                 </form>
             </div>
-        </section>
+        </div>
     </footer>
 
     <script src="./js/modal.js"></script>
